# OS_25.03

./: Ответы на вопросы.md
cpp-container-utils/: CMakeLists.txt  README.md
cpp-container-utils/rest_service/: container_service.hpp  main.cpp
cpp-container-utils/src/: CMakeLists.txt
cpp-container-utils/src/include/: container_utils.hpp  list_utils.hpp
cpp-container-utils/src/src/: container_utils.cpp  list_utils.cpp
cpp-container-utils/tests/: CMakeLists.txt  test_duplicates.cpp  test_factorials.cpp  test_list_reverse.cpp
